[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ribbet"
description = "Ribbet is a package that introduces users to Ribbet the frog, a virtual pet that cheers up the user based on different commands. Let's eat bugs together!"
version = "0.1.3"
dependencies = [
    "argparse >=1.4.0, <2.0.0",
    "pytest ~=8.1.1",
    "build >=1.1.1,<2.0.0"
]
authors = [
  {name = "Christina Borao"},
  {name = "Bonny Chavarría"},
  {name = "Damla Önder"},
  {name = "Yura Wu"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "frog", "encourage", "animals", "cute", "funny", "bugs"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/software-students-spring2024/3-python-package-exercise-berries"
Repository = "https://github.com/software-students-spring2024/3-python-package-exercise-berries.git"
"Bug Tracker" = "https://github.com/software-students-spring2024/3-python-package-exercise-berries/issues"

[project.entry-points.console_scripts]
ribbet = "ribbet.ribbet_cli:main"